refactor: 신고글 중첩 객체 구조로 수정